2005-06-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c: also push/pop _PSBANK, added # to 0x03
	* device/lib/_itoa.c,
	* device/lib/_ltoa.c: optimized codesize
	* src/SDCCsymt.c (checkSClass): added sanity check for sfr at addresses,
	  but don't know how to suppress the double warning.
	* src/mcs51/gen.c (genPlusIncr): fixed bug when incrementing volatile int's
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: added warning W_SFR_ABSRANGE for sanity check

2005-06-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asexpr.c (expr): disabled warning "not in .flat24 mode",
	  fixed old K&R prototypes
	* as/mcs51/asout.c (outrb): always output as if generating 24bit addresses
	* device/lib/_gptrget.c,
	* device/lib/_gptrgetc.c,
	* device/lib/_gptrput.c: changed versions for new memory indicator values,
	  also new versions for small generic pointers and banked generic pointers
	* src/port.h: added const_name
	* src/SDCC.lex: added keywords sfr16, __sfr16, sfr32, __sfr32
	* src/SDCC.y: added tokens SFR16, SFR32 and their sfr_attributes
	* src/SDCCcse.c (findPrevIc): check all associative operators
	* src/SDCCglue.c (emitMaps): use CONST_NAME if defined
	* src/SDCCicode.h: added macro IS_ASSOCIATIVE
	* src/SDCCmem.c: updated comments,
	  set far-space to 0 for pdata, results in optimized code
	* src/SDCCmem.h: added macro CONST_NAME
	* src/SDCCsymt.h: renumerated generic pointer types GPTYPE_... thereby
	  moving the info into the highest bits, see also gptrget/gptrput
	* src/src.dsp: added sdcc.ico to project files
	* src/avr/gen.c (genCast): fixed bug 0x%d
	* src/avr/main.c (avr_port): added "CONST (CODE)" for const_name
	* src/ds390/gen.c (aopForRemat, adjustArithmeticResult): disconnected direct
	  relation between ptr_type and DCL_TYPE,
	  (genCast): fixed bug 0x%d
	* src/ds390/main.c (ds390_port, tininative_port, ds400_port): added "CONST
	  (CODE)" for const_name
	* src/hc08/gen.c (genCast): fixed bug 0x%d